syntax = "proto3";

option go_package = "github.com/HaCaK/pse-bee-gobooking/src/booking/proto";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package gen;

service BookingExternal {
  rpc CreateBooking(CreateBookingReq) returns (BookingResp) {
    option (google.api.http) = {
      post: "/bookings",
      body: "*"
    };
  }
  rpc UpdateBooking(UpdateBookingReq) returns (BookingResp) {
    option (google.api.http) = {
      put: "/bookings/{id}",
      body: "*"
    };
  }
  rpc GetBooking(BookingIdReq) returns (BookingResp) {
    option (google.api.http) = {
      get: "/bookings/{id}"
    };
  }
  rpc GetBookings(google.protobuf.Empty) returns (ListBookingsResp) {
    option (google.api.http) = {
      get: "/bookings"
    };
  }
  rpc DeleteBooking(BookingIdReq) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/bookings/{id}"
    };
  }
}

message CreateBookingReq {
  string comment = 1;
  string customer_name = 2;
  uint32 property_id = 3;
}

message UpdateBookingReq {
  uint32 id = 1;
  string comment = 2;
  string customer_name = 3;
  uint32 property_id = 4;
}

message BookingIdReq {
  uint32 id = 1;
}

message ListBookingsResp {
  repeated BookingResp bookings = 1;
}

message BookingResp {
  uint32 id = 1;
  string comment = 2;
  string customer_name = 3;
  string status = 4;
  uint32 property_id = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}